# blobby

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
blobby/: __init__.py  _gcp.py  aws.py  azure.py  filesystem.py  gcp.py  memory.py  s3.py  storage.py
cloud_store/: __init__.py  error.py  filesystem.py  memory.py  s3.py  storage.py
tests/: conftest.py  storage_contexts.py  test_filesystem_storage.py  test_pydantic_models.py  test_raw_data.py
