[tool.poetry]
name = "blobby"
version = "0.0.6"
description = "Cloud provider agnostic library for object storage."
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

boto3 = "^1.34"
pydantic = "^2"

[tool.poetry.group.test.dependencies]
moto = { version = "^5.0.9", extras = ["s3"] }
pytest = "^8.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14"

[tool.poetry.group.dev.dependencies]
boto3-stubs = { version = "^1.34", extras = ["essential"] }
isort = "^5.13"
mypy = "^1.10"
ruff = "^0.4.8"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "N", # PEP 8 naming convention
]

ignore = [
    "E501", # line too long, handled by formatter
    "W291", # trailing whitespace, handled by formatter
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"